ocparser.output
   0  $accept : %entry% $end

   1  oc_output : relation

   2  relation : relation UNION relation
   3           | OBRACE OSQUARE aexp_list CSQUARE COLON pconstr CBRACE
   4           | OBRACE OSQUARE aexp_list CSQUARE CBRACE
   5           | OBRACE TRUE CBRACE
   6           | OBRACE FALSE CBRACE

   7  pconstr : pconstr AND pconstr
   8          | lbconstr
   9          | EXISTS OPAREN var_list COLON pconstr CPAREN

  10  lbconstr : bconstr
  11           | lbconstr LT aexp_list
  12           | lbconstr LTE aexp_list
  13           | lbconstr GT aexp_list
  14           | lbconstr GTE aexp_list
  15           | lbconstr EQ aexp_list
  16           | lbconstr NEQ aexp_list

  17  bconstr : aexp_list LT aexp_list
  18          | aexp_list LTE aexp_list
  19          | aexp_list GT aexp_list
  20          | aexp_list GTE aexp_list
  21          | aexp_list EQ aexp_list
  22          | aexp_list NEQ aexp_list
  23          | TRUE
  24          | FALSE

  25  aexp : cid
  26       | ICONST
  27       | ICONST cid
  28       | aexp PLUS aexp
  29       | aexp MINUS aexp
  30       | MINUS aexp

  31  aexp_list :
  32            | aexp_list_rec

  33  aexp_list_rec : aexp
  34                | aexp_list_rec COMMA aexp

  35  var_list :
  36           | var_list_rec

  37  var_list_rec : cid
  38               | var_list_rec COMMA cid

  39  cid : ID
  40      | IDPRIMED

  41  %entry% : '\001' oc_output

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . oc_output  (41)

	OBRACE  shift 3
	.  error

	oc_output  goto 4
	relation  goto 5


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	relation : OBRACE . OSQUARE aexp_list CSQUARE COLON pconstr CBRACE  (3)
	relation : OBRACE . OSQUARE aexp_list CSQUARE CBRACE  (4)
	relation : OBRACE . TRUE CBRACE  (5)
	relation : OBRACE . FALSE CBRACE  (6)

	FALSE  shift 6
	OSQUARE  shift 7
	TRUE  shift 8
	.  error


state 4
	%entry% : '\001' oc_output .  (41)

	.  reduce 41


state 5
	oc_output : relation .  (1)
	relation : relation . UNION relation  (2)

	UNION  shift 9
	$end  reduce 1


state 6
	relation : OBRACE FALSE . CBRACE  (6)

	CBRACE  shift 10
	.  error


state 7
	relation : OBRACE OSQUARE . aexp_list CSQUARE COLON pconstr CBRACE  (3)
	relation : OBRACE OSQUARE . aexp_list CSQUARE CBRACE  (4)
	aexp_list : .  (31)

	ICONST  shift 11
	ID  shift 12
	IDPRIMED  shift 13
	MINUS  shift 14
	CSQUARE  reduce 31

	aexp_list  goto 15
	aexp  goto 16
	cid  goto 17
	aexp_list_rec  goto 18


state 8
	relation : OBRACE TRUE . CBRACE  (5)

	CBRACE  shift 19
	.  error


state 9
	relation : relation UNION . relation  (2)

	OBRACE  shift 3
	.  error

	relation  goto 20


state 10
	relation : OBRACE FALSE CBRACE .  (6)

	.  reduce 6


state 11
	aexp : ICONST .  (26)
	aexp : ICONST . cid  (27)

	ID  shift 12
	IDPRIMED  shift 13
	AND  reduce 26
	CBRACE  reduce 26
	COMMA  reduce 26
	CPAREN  reduce 26
	CSQUARE  reduce 26
	EQ  reduce 26
	GT  reduce 26
	GTE  reduce 26
	LT  reduce 26
	LTE  reduce 26
	MINUS  reduce 26
	NEQ  reduce 26
	PLUS  reduce 26

	cid  goto 21


state 12
	cid : ID .  (39)

	.  reduce 39


state 13
	cid : IDPRIMED .  (40)

	.  reduce 40


state 14
	aexp : MINUS . aexp  (30)

	ICONST  shift 11
	ID  shift 12
	IDPRIMED  shift 13
	MINUS  shift 14
	.  error

	aexp  goto 22
	cid  goto 17


state 15
	relation : OBRACE OSQUARE aexp_list . CSQUARE COLON pconstr CBRACE  (3)
	relation : OBRACE OSQUARE aexp_list . CSQUARE CBRACE  (4)

	CSQUARE  shift 23
	.  error


state 16
	aexp : aexp . PLUS aexp  (28)
	aexp : aexp . MINUS aexp  (29)
	aexp_list_rec : aexp .  (33)

	MINUS  shift 24
	PLUS  shift 25
	AND  reduce 33
	CBRACE  reduce 33
	COMMA  reduce 33
	CPAREN  reduce 33
	CSQUARE  reduce 33
	EQ  reduce 33
	GT  reduce 33
	GTE  reduce 33
	LT  reduce 33
	LTE  reduce 33
	NEQ  reduce 33


state 17
	aexp : cid .  (25)

	.  reduce 25


state 18
	aexp_list : aexp_list_rec .  (32)
	aexp_list_rec : aexp_list_rec . COMMA aexp  (34)

	COMMA  shift 26
	AND  reduce 32
	CBRACE  reduce 32
	CPAREN  reduce 32
	CSQUARE  reduce 32
	EQ  reduce 32
	GT  reduce 32
	GTE  reduce 32
	LT  reduce 32
	LTE  reduce 32
	NEQ  reduce 32


state 19
	relation : OBRACE TRUE CBRACE .  (5)

	.  reduce 5


state 20
	relation : relation . UNION relation  (2)
	relation : relation UNION relation .  (2)

	.  reduce 2


state 21
	aexp : ICONST cid .  (27)

	.  reduce 27


state 22
	aexp : aexp . PLUS aexp  (28)
	aexp : aexp . MINUS aexp  (29)
	aexp : MINUS aexp .  (30)

	.  reduce 30


state 23
	relation : OBRACE OSQUARE aexp_list CSQUARE . COLON pconstr CBRACE  (3)
	relation : OBRACE OSQUARE aexp_list CSQUARE . CBRACE  (4)

	CBRACE  shift 27
	COLON  shift 28
	.  error


state 24
	aexp : aexp MINUS . aexp  (29)

	ICONST  shift 11
	ID  shift 12
	IDPRIMED  shift 13
	MINUS  shift 14
	.  error

	aexp  goto 29
	cid  goto 17


state 25
	aexp : aexp PLUS . aexp  (28)

	ICONST  shift 11
	ID  shift 12
	IDPRIMED  shift 13
	MINUS  shift 14
	.  error

	aexp  goto 30
	cid  goto 17


state 26
	aexp_list_rec : aexp_list_rec COMMA . aexp  (34)

	ICONST  shift 11
	ID  shift 12
	IDPRIMED  shift 13
	MINUS  shift 14
	.  error

	aexp  goto 31
	cid  goto 17


state 27
	relation : OBRACE OSQUARE aexp_list CSQUARE CBRACE .  (4)

	.  reduce 4


state 28
	relation : OBRACE OSQUARE aexp_list CSQUARE COLON . pconstr CBRACE  (3)
	aexp_list : .  (31)

	EXISTS  shift 32
	FALSE  shift 33
	ICONST  shift 11
	ID  shift 12
	IDPRIMED  shift 13
	MINUS  shift 14
	TRUE  shift 34
	EQ  reduce 31
	GT  reduce 31
	GTE  reduce 31
	LT  reduce 31
	LTE  reduce 31
	NEQ  reduce 31

	aexp_list  goto 35
	pconstr  goto 36
	lbconstr  goto 37
	bconstr  goto 38
	aexp  goto 16
	cid  goto 17
	aexp_list_rec  goto 18


state 29
	aexp : aexp . PLUS aexp  (28)
	aexp : aexp . MINUS aexp  (29)
	aexp : aexp MINUS aexp .  (29)

	.  reduce 29


state 30
	aexp : aexp . PLUS aexp  (28)
	aexp : aexp PLUS aexp .  (28)
	aexp : aexp . MINUS aexp  (29)

	.  reduce 28


state 31
	aexp : aexp . PLUS aexp  (28)
	aexp : aexp . MINUS aexp  (29)
	aexp_list_rec : aexp_list_rec COMMA aexp .  (34)

	MINUS  shift 24
	PLUS  shift 25
	AND  reduce 34
	CBRACE  reduce 34
	COMMA  reduce 34
	CPAREN  reduce 34
	CSQUARE  reduce 34
	EQ  reduce 34
	GT  reduce 34
	GTE  reduce 34
	LT  reduce 34
	LTE  reduce 34
	NEQ  reduce 34


state 32
	pconstr : EXISTS . OPAREN var_list COLON pconstr CPAREN  (9)

	OPAREN  shift 39
	.  error


state 33
	bconstr : FALSE .  (24)

	.  reduce 24


state 34
	bconstr : TRUE .  (23)

	.  reduce 23


state 35
	bconstr : aexp_list . LT aexp_list  (17)
	bconstr : aexp_list . LTE aexp_list  (18)
	bconstr : aexp_list . GT aexp_list  (19)
	bconstr : aexp_list . GTE aexp_list  (20)
	bconstr : aexp_list . EQ aexp_list  (21)
	bconstr : aexp_list . NEQ aexp_list  (22)

	EQ  shift 40
	GT  shift 41
	GTE  shift 42
	LT  shift 43
	LTE  shift 44
	NEQ  shift 45
	.  error


state 36
	relation : OBRACE OSQUARE aexp_list CSQUARE COLON pconstr . CBRACE  (3)
	pconstr : pconstr . AND pconstr  (7)

	AND  shift 46
	CBRACE  shift 47
	.  error


state 37
	pconstr : lbconstr .  (8)
	lbconstr : lbconstr . LT aexp_list  (11)
	lbconstr : lbconstr . LTE aexp_list  (12)
	lbconstr : lbconstr . GT aexp_list  (13)
	lbconstr : lbconstr . GTE aexp_list  (14)
	lbconstr : lbconstr . EQ aexp_list  (15)
	lbconstr : lbconstr . NEQ aexp_list  (16)

	EQ  shift 48
	GT  shift 49
	GTE  shift 50
	LT  shift 51
	LTE  shift 52
	NEQ  shift 53
	AND  reduce 8
	CBRACE  reduce 8
	CPAREN  reduce 8


state 38
	lbconstr : bconstr .  (10)

	.  reduce 10


state 39
	pconstr : EXISTS OPAREN . var_list COLON pconstr CPAREN  (9)
	var_list : .  (35)

	ID  shift 12
	IDPRIMED  shift 13
	COLON  reduce 35

	var_list  goto 54
	cid  goto 55
	var_list_rec  goto 56


state 40
	bconstr : aexp_list EQ . aexp_list  (21)
	aexp_list : .  (31)

	ICONST  shift 11
	ID  shift 12
	IDPRIMED  shift 13
	MINUS  shift 14
	AND  reduce 31
	CBRACE  reduce 31
	CPAREN  reduce 31
	EQ  reduce 31
	GT  reduce 31
	GTE  reduce 31
	LT  reduce 31
	LTE  reduce 31
	NEQ  reduce 31

	aexp_list  goto 57
	aexp  goto 16
	cid  goto 17
	aexp_list_rec  goto 18


state 41
	bconstr : aexp_list GT . aexp_list  (19)
	aexp_list : .  (31)

	ICONST  shift 11
	ID  shift 12
	IDPRIMED  shift 13
	MINUS  shift 14
	AND  reduce 31
	CBRACE  reduce 31
	CPAREN  reduce 31
	EQ  reduce 31
	GT  reduce 31
	GTE  reduce 31
	LT  reduce 31
	LTE  reduce 31
	NEQ  reduce 31

	aexp_list  goto 58
	aexp  goto 16
	cid  goto 17
	aexp_list_rec  goto 18


state 42
	bconstr : aexp_list GTE . aexp_list  (20)
	aexp_list : .  (31)

	ICONST  shift 11
	ID  shift 12
	IDPRIMED  shift 13
	MINUS  shift 14
	AND  reduce 31
	CBRACE  reduce 31
	CPAREN  reduce 31
	EQ  reduce 31
	GT  reduce 31
	GTE  reduce 31
	LT  reduce 31
	LTE  reduce 31
	NEQ  reduce 31

	aexp_list  goto 59
	aexp  goto 16
	cid  goto 17
	aexp_list_rec  goto 18


state 43
	bconstr : aexp_list LT . aexp_list  (17)
	aexp_list : .  (31)

	ICONST  shift 11
	ID  shift 12
	IDPRIMED  shift 13
	MINUS  shift 14
	AND  reduce 31
	CBRACE  reduce 31
	CPAREN  reduce 31
	EQ  reduce 31
	GT  reduce 31
	GTE  reduce 31
	LT  reduce 31
	LTE  reduce 31
	NEQ  reduce 31

	aexp_list  goto 60
	aexp  goto 16
	cid  goto 17
	aexp_list_rec  goto 18


state 44
	bconstr : aexp_list LTE . aexp_list  (18)
	aexp_list : .  (31)

	ICONST  shift 11
	ID  shift 12
	IDPRIMED  shift 13
	MINUS  shift 14
	AND  reduce 31
	CBRACE  reduce 31
	CPAREN  reduce 31
	EQ  reduce 31
	GT  reduce 31
	GTE  reduce 31
	LT  reduce 31
	LTE  reduce 31
	NEQ  reduce 31

	aexp_list  goto 61
	aexp  goto 16
	cid  goto 17
	aexp_list_rec  goto 18


state 45
	bconstr : aexp_list NEQ . aexp_list  (22)
	aexp_list : .  (31)

	ICONST  shift 11
	ID  shift 12
	IDPRIMED  shift 13
	MINUS  shift 14
	AND  reduce 31
	CBRACE  reduce 31
	CPAREN  reduce 31
	EQ  reduce 31
	GT  reduce 31
	GTE  reduce 31
	LT  reduce 31
	LTE  reduce 31
	NEQ  reduce 31

	aexp_list  goto 62
	aexp  goto 16
	cid  goto 17
	aexp_list_rec  goto 18


state 46
	pconstr : pconstr AND . pconstr  (7)
	aexp_list : .  (31)

	EXISTS  shift 32
	FALSE  shift 33
	ICONST  shift 11
	ID  shift 12
	IDPRIMED  shift 13
	MINUS  shift 14
	TRUE  shift 34
	EQ  reduce 31
	GT  reduce 31
	GTE  reduce 31
	LT  reduce 31
	LTE  reduce 31
	NEQ  reduce 31

	aexp_list  goto 35
	pconstr  goto 63
	lbconstr  goto 37
	bconstr  goto 38
	aexp  goto 16
	cid  goto 17
	aexp_list_rec  goto 18


state 47
	relation : OBRACE OSQUARE aexp_list CSQUARE COLON pconstr CBRACE .  (3)

	.  reduce 3


state 48
	lbconstr : lbconstr EQ . aexp_list  (15)
	aexp_list : .  (31)

	ICONST  shift 11
	ID  shift 12
	IDPRIMED  shift 13
	MINUS  shift 14
	AND  reduce 31
	CBRACE  reduce 31
	CPAREN  reduce 31
	EQ  reduce 31
	GT  reduce 31
	GTE  reduce 31
	LT  reduce 31
	LTE  reduce 31
	NEQ  reduce 31

	aexp_list  goto 64
	aexp  goto 16
	cid  goto 17
	aexp_list_rec  goto 18


state 49
	lbconstr : lbconstr GT . aexp_list  (13)
	aexp_list : .  (31)

	ICONST  shift 11
	ID  shift 12
	IDPRIMED  shift 13
	MINUS  shift 14
	AND  reduce 31
	CBRACE  reduce 31
	CPAREN  reduce 31
	EQ  reduce 31
	GT  reduce 31
	GTE  reduce 31
	LT  reduce 31
	LTE  reduce 31
	NEQ  reduce 31

	aexp_list  goto 65
	aexp  goto 16
	cid  goto 17
	aexp_list_rec  goto 18


state 50
	lbconstr : lbconstr GTE . aexp_list  (14)
	aexp_list : .  (31)

	ICONST  shift 11
	ID  shift 12
	IDPRIMED  shift 13
	MINUS  shift 14
	AND  reduce 31
	CBRACE  reduce 31
	CPAREN  reduce 31
	EQ  reduce 31
	GT  reduce 31
	GTE  reduce 31
	LT  reduce 31
	LTE  reduce 31
	NEQ  reduce 31

	aexp_list  goto 66
	aexp  goto 16
	cid  goto 17
	aexp_list_rec  goto 18


state 51
	lbconstr : lbconstr LT . aexp_list  (11)
	aexp_list : .  (31)

	ICONST  shift 11
	ID  shift 12
	IDPRIMED  shift 13
	MINUS  shift 14
	AND  reduce 31
	CBRACE  reduce 31
	CPAREN  reduce 31
	EQ  reduce 31
	GT  reduce 31
	GTE  reduce 31
	LT  reduce 31
	LTE  reduce 31
	NEQ  reduce 31

	aexp_list  goto 67
	aexp  goto 16
	cid  goto 17
	aexp_list_rec  goto 18


state 52
	lbconstr : lbconstr LTE . aexp_list  (12)
	aexp_list : .  (31)

	ICONST  shift 11
	ID  shift 12
	IDPRIMED  shift 13
	MINUS  shift 14
	AND  reduce 31
	CBRACE  reduce 31
	CPAREN  reduce 31
	EQ  reduce 31
	GT  reduce 31
	GTE  reduce 31
	LT  reduce 31
	LTE  reduce 31
	NEQ  reduce 31

	aexp_list  goto 68
	aexp  goto 16
	cid  goto 17
	aexp_list_rec  goto 18


state 53
	lbconstr : lbconstr NEQ . aexp_list  (16)
	aexp_list : .  (31)

	ICONST  shift 11
	ID  shift 12
	IDPRIMED  shift 13
	MINUS  shift 14
	AND  reduce 31
	CBRACE  reduce 31
	CPAREN  reduce 31
	EQ  reduce 31
	GT  reduce 31
	GTE  reduce 31
	LT  reduce 31
	LTE  reduce 31
	NEQ  reduce 31

	aexp_list  goto 69
	aexp  goto 16
	cid  goto 17
	aexp_list_rec  goto 18


state 54
	pconstr : EXISTS OPAREN var_list . COLON pconstr CPAREN  (9)

	COLON  shift 70
	.  error


state 55
	var_list_rec : cid .  (37)

	.  reduce 37


state 56
	var_list : var_list_rec .  (36)
	var_list_rec : var_list_rec . COMMA cid  (38)

	COMMA  shift 71
	COLON  reduce 36


state 57
	bconstr : aexp_list EQ aexp_list .  (21)

	.  reduce 21


state 58
	bconstr : aexp_list GT aexp_list .  (19)

	.  reduce 19


state 59
	bconstr : aexp_list GTE aexp_list .  (20)

	.  reduce 20


state 60
	bconstr : aexp_list LT aexp_list .  (17)

	.  reduce 17


state 61
	bconstr : aexp_list LTE aexp_list .  (18)

	.  reduce 18


state 62
	bconstr : aexp_list NEQ aexp_list .  (22)

	.  reduce 22


state 63
	pconstr : pconstr . AND pconstr  (7)
	pconstr : pconstr AND pconstr .  (7)

	.  reduce 7


state 64
	lbconstr : lbconstr EQ aexp_list .  (15)

	.  reduce 15


state 65
	lbconstr : lbconstr GT aexp_list .  (13)

	.  reduce 13


state 66
	lbconstr : lbconstr GTE aexp_list .  (14)

	.  reduce 14


state 67
	lbconstr : lbconstr LT aexp_list .  (11)

	.  reduce 11


state 68
	lbconstr : lbconstr LTE aexp_list .  (12)

	.  reduce 12


state 69
	lbconstr : lbconstr NEQ aexp_list .  (16)

	.  reduce 16


state 70
	pconstr : EXISTS OPAREN var_list COLON . pconstr CPAREN  (9)
	aexp_list : .  (31)

	EXISTS  shift 32
	FALSE  shift 33
	ICONST  shift 11
	ID  shift 12
	IDPRIMED  shift 13
	MINUS  shift 14
	TRUE  shift 34
	EQ  reduce 31
	GT  reduce 31
	GTE  reduce 31
	LT  reduce 31
	LTE  reduce 31
	NEQ  reduce 31

	aexp_list  goto 35
	pconstr  goto 72
	lbconstr  goto 37
	bconstr  goto 38
	aexp  goto 16
	cid  goto 17
	aexp_list_rec  goto 18


state 71
	var_list_rec : var_list_rec COMMA . cid  (38)

	ID  shift 12
	IDPRIMED  shift 13
	.  error

	cid  goto 73


state 72
	pconstr : pconstr . AND pconstr  (7)
	pconstr : EXISTS OPAREN var_list COLON pconstr . CPAREN  (9)

	AND  shift 46
	CPAREN  shift 74
	.  error


state 73
	var_list_rec : var_list_rec COMMA cid .  (38)

	.  reduce 38


state 74
	pconstr : EXISTS OPAREN var_list COLON pconstr CPAREN .  (9)

	.  reduce 9


38 terminals, 13 nonterminals
42 grammar rules, 75 states
